--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4217,5 +4217,15 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Звуци за известяване",
     "CL_DV_OV_24_navigation_sounds": "Звуци на навигация",
-    "CL_DV_OV_24_on_during_use": "Включен по време на употреба"
+    "CL_DV_OV_24_on_during_use": "Включен по време на употреба",
+    "tips_key": "Съвети",
+    "CL_DV_OV_stage_cooking_desc": "Многофазното готвене ви позволява да комбинирате множество нагревателни системи в един процес на готвене. Изберете различни функции и настройки, за да съставите процеса на готвене според вашите предпочитания.",
+    "CL_DV_OV_remote_start_tips": "Ако включите Remote Start, можете не само да изпращате, но и да стартирате програмата от разстояние.",
+    "CL_DV_OV_how_to_do_this": "Как да стане това?",
+    "CL_DV_OV_add_stage": "Добавете етап",
+    "CL_DV_OV_stage": "Етап",
+    "CL_DV_HOB_sensitivity_level": "Ниво на чувствителност на автоматичния капак",
+    "CL_DV_HOB_hood_title": "качулка",
+    "CL_DV_RF_food_inventory": "Инвентаризация на храните",
+    "p_check_email": "Моля, проверете имейла си"
 }
