--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4217,5 +4217,15 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Ήχοι ειδοποίησης",
     "CL_DV_OV_24_navigation_sounds": "Ήχοι πλοήγησης",
-    "CL_DV_OV_24_on_during_use": "Αναμμένο κατά τη χρήση"
+    "CL_DV_OV_24_on_during_use": "Αναμμένο κατά τη χρήση",
+    "tips_key": "Συμβουλές",
+    "CL_DV_OV_stage_cooking_desc": "Το μαγείρεμα πολλαπλών φάσεων σάς επιτρέπει να συνδυάσετε πολλαπλά συστήματα θέρμανσης σε μία διαδικασία μαγειρέματος. Επιλέξτε διαφορετικές λειτουργίες και ρυθμίσεις για να συνθέσετε τη διαδικασία μαγειρέματος της προτίμησής σας.",
+    "CL_DV_OV_remote_start_tips": "Εάν ενεργοποιήσετε την Απομακρυσμένη Εκκίνηση, μπορείτε όχι μόνο να στείλετε αλλά και να ξεκινήσετε το πρόγραμμα από απόσταση.",
+    "CL_DV_OV_how_to_do_this": "Πώς να το κάνετε αυτό;",
+    "CL_DV_OV_add_stage": "Προσθήκη σταδίου",
+    "CL_DV_OV_stage": "Στάδιο",
+    "CL_DV_HOB_sensitivity_level": "Επίπεδο ευαισθησίας αυτόματης κουκούλας",
+    "CL_DV_HOB_hood_title": "κουκούλα",
+    "CL_DV_RF_food_inventory": "Απογραφή Τροφίμων",
+    "p_check_email": "Ελέγξτε το email σας"
 }
