--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4217,5 +4217,15 @@
     "CL_CF_RM_asko_pro_floor": "АСКО Про",
     "CL_DV_OV_24_notification_sounds": "Звукови обавештења",
     "CL_DV_OV_24_navigation_sounds": "Звукови навигације",
-    "CL_DV_OV_24_on_during_use": "Укључено током употребе"
+    "CL_DV_OV_24_on_during_use": "Укључено током употребе",
+    "tips_key": "Савети",
+    "CL_DV_OV_stage_cooking_desc": "Вишефазно кување вам омогућава да комбинујете више система грејача у једном процесу кувања. Изаберите различите функције и подешавања да бисте саставили процес кувања по својој жељи.",
+    "CL_DV_OV_remote_start_tips": "Ако укључите даљинско покретање, можете не само да шаљете, већ и да покрећете програм из даљине.",
+    "CL_DV_OV_how_to_do_this": "Како то учинити?",
+    "CL_DV_OV_add_stage": "Додајте позорницу",
+    "CL_DV_OV_stage": "Стаге",
+    "CL_DV_HOB_sensitivity_level": "Ниво осетљивости ауто хаубе",
+    "CL_DV_HOB_hood_title": "хоод",
+    "CL_DV_RF_food_inventory": "Инвентар хране",
+    "p_check_email": "Проверите своју е-пошту"
 }
