--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4217,5 +4217,15 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Ilmoitusäänet",
     "CL_DV_OV_24_navigation_sounds": "Navigointiäänet",
-    "CL_DV_OV_24_on_during_use": "Käytössä käytössä"
+    "CL_DV_OV_24_on_during_use": "Käytössä käytössä",
+    "tips_key": "Vinkkejä",
+    "CL_DV_OV_stage_cooking_desc": "Monivaiheinen kypsennys mahdollistaa useiden lämmitysjärjestelmien yhdistämisen yhdeksi kypsennysprosessiksi. Valitse eri toiminnot ja asetukset kootaksesi haluamasi kypsennysprosessin.",
+    "CL_DV_OV_remote_start_tips": "Jos otat etäkäynnistyksen käyttöön, voit lähettää ohjelman lisäksi myös kaukaa.",
+    "CL_DV_OV_how_to_do_this": "Miten tämä tehdään?",
+    "CL_DV_OV_add_stage": "Lisää vaihe",
+    "CL_DV_OV_stage": "Vaihe",
+    "CL_DV_HOB_sensitivity_level": "Automaattinen liesituulettimen herkkyystaso",
+    "CL_DV_HOB_hood_title": "huppu",
+    "CL_DV_RF_food_inventory": "Elintarvikeluettelo",
+    "p_check_email": "Tarkista sähköpostisi"
 }
