--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4217,5 +4217,15 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Chuyên nghiệp",
     "CL_DV_OV_24_notification_sounds": "Âm thanh thông báo",
     "CL_DV_OV_24_navigation_sounds": "Âm thanh dẫn đường",
-    "CL_DV_OV_24_on_during_use": "Bật trong khi sử dụng"
+    "CL_DV_OV_24_on_during_use": "Bật trong khi sử dụng",
+    "tips_key": "Mẹo",
+    "CL_DV_OV_stage_cooking_desc": "Nấu nhiều giai đoạn cho phép bạn kết hợp nhiều hệ thống gia nhiệt trong một quy trình nấu. Chọn các chức năng và cài đặt khác nhau để tạo nên quy trình nấu theo sở thích của bạn.",
+    "CL_DV_OV_remote_start_tips": "Nếu bạn bật tính năng Khởi động từ xa, bạn không chỉ có thể gửi mà còn có thể khởi động chương trình từ xa.",
+    "CL_DV_OV_how_to_do_this": "Làm thế nào để thực hiện điều này?",
+    "CL_DV_OV_add_stage": "Thêm giai đoạn",
+    "CL_DV_OV_stage": "Sân khấu",
+    "CL_DV_HOB_sensitivity_level": "Mức độ nhạy của mui xe tự động",
+    "CL_DV_HOB_hood_title": "Mui xe",
+    "CL_DV_RF_food_inventory": "Hàng tồn kho thực phẩm",
+    "p_check_email": "Vui lòng kiểm tra email của bạn"
 }
